--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "express": "^4.15.2",
+    "moment": "^2.18.1",
     "mssql": "^4.0.2",
     "pug": "^2.0.0-beta.12"
   }
